deployment/overlays/argocd/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.trichter.hauptspeicher.com`)
      priority: 10
      kind: Rule
      services:
        - name: argocd-server
          port: 80
    - match: Host(`argocd.trichter.hauptspeicher.com`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      kind: Rule
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    certResolver: myresolver
